# FEMlium

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/actions/jupyter/check_metadata/: check_metadata.py
.github/actions/jupyter/convert/: action.yml
.github/actions/jupyter/run_and_convert/: action.yml
.github/actions/jupyter/upload_to_website/: action.yml
.github/workflows/: ci.yml  ci_against_releases.yml  ci_unversioned_only.yml  pypi.yml  release.yml
docs/: api.rst  conf.py  index.rst
femlium/: __init__.py  base_mesh_plotter.py  base_plotter.py  base_solution_plotter.py  dolfin_plotter.py  dolfinx_plotter.py  domain_plotter.py  firedrake_plotter.py  meshio_plotter.py  numpy_plotter.py  transformer_wrapper.py
femlium/plugins/: __init__.py  poly_line_arrow.py
femlium/utils/: __init__.py  colorbar_wrapper.py  geojson_with_arrows.py  transformer_wrapper.py
tests/unit/: test_base_mesh_plotter.py  test_domain_plotter.py
tutorials/: conftest.py
tutorials/01_introduction/: tutorial_garda_dolfin.ipynb  tutorial_garda_dolfinx.ipynb  tutorial_garda_firedrake.ipynb  tutorial_garda_meshio.ipynb
tutorials/01_introduction/data/: garda.csv  garda.msh  garda_interface.csv  generate_mesh.ipynb
tutorials/01_introduction/utils/: __init__.py  gmsh_to_fenics.py  gmsh_to_fenicsx.py
