[metadata]
name = FEMlium
version = 0.0.dev1
author = Francesco Ballarin (and contributors)
email = francesco.ballarin@unicatt.it
maintainer = Francesco Ballarin
description = Interactive geographic plots of finite element data with folium
url = https://github.com/femlium/felium
project_urls =
    Homepage = https://github.com/femlium/felium
    Issues = https://github.com/femlium/felium/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.6
setup_requires =
    setuptools >= 58
    wheel
install_requires =
    branca
    folium >= 0.12.0
    geojson
    matplotlib
    numpy
    pyproj

[options.extras_require]
docs =
    sphinx
lint =
    flake8
    flake8-annotations
    flake8-docstrings
    flake8-import-restrictions
    flake8-isort
    flake8-quotes
tests =
    nbqa
    nbvalx[unit_tests] @ git+https://github.com/multiphenics/nbvalx.git
    pytest
    pytest-cov
tutorials =
    # fenics-dolfin
    # fenics-dolfinx
    # firedrake
    gmsh
    meshio
    nbvalx[notebooks] @ git+https://github.com/multiphenics/nbvalx.git
    viskex @ git+https://github.com/viskex/viskex.git

[flake8]
max-line-length = 120
show-source = True
docstring-convention = numpy
inline-quotes = double
imr241_exclude = femlium, femlium.*
imr245_include = *
imr245_exclude = femlium, femlium.*
ignore = ANN101, W503
exclude = .eggs, build, dist
per-file-ignores =
    femlium/__init__.py: F401
    femlium/**/__init__.py: F401
    tutorials/**/tutorial_*.py: D100, I004
    tutorials/**/generate_mesh*.py: D100, I004

[isort]
line_length = 120
multi_line_output = 4
order_by_type = False

[coverage:paths]
source =
    femlium
    */dist-packages/femlium
    */site-packages/femlium
